--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
   "require": {
     "php": ">=7.2",
     "illuminate/support": "5.*|^6.0|^7.0",
-    "illuminate/container": "5.*|^6.0|^7.0",
+    "illuminate/container": "5.*|^6.0|^7.0|^8.0",
     "nesbot/carbon": "^1.35|^2.0",
-    "guzzlehttp/guzzle": "^6.5"
+    "guzzlehttp/guzzle": "^7.0.1"
   },
   "require-dev": {
     "phpunit/phpunit": "7.*|6.*",
