--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/support": "5.*|^6.0|^7.0|^8.0",
-    "illuminate/container": "5.*|^6.0|^7.0|^8.0",
+    "illuminate/support": "5.*|^6.0|^7.0|^8.0|^9.0",
+    "illuminate/container": "5.*|^6.0|^7.0|^8.0|^9.0",
     "nesbot/carbon": "^1.35|^2.0",
     "guzzlehttp/guzzle": "^7.0.1"
   },
