--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/support": "5.*|^6.0|^7.0|^8.0|^9.0",
-    "illuminate/container": "5.*|^6.0|^7.0|^8.0|^9.0",
-    "nesbot/carbon": "^1.35|^2.0",
-    "guzzlehttp/guzzle": "^7.0.1"
+    "illuminate/support": ">=5",
+    "illuminate/container": ">=5",
+    "nesbot/carbon": ">=1.35",
+    "guzzlehttp/guzzle": ">=7.0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "9.*|7.*|6.*",
+    "phpunit/phpunit": ">=6",
     "mockery/mockery": "0.9",
     "friendsofphp/php-cs-fixer": "2.*",
     "php-coveralls/php-coveralls": "^2.0"
